--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
 
   <!-- Slider Section -->
     <!-- Slider Section -->
-<section id="highlighted-repositories">
+<section id="Destaque">
   <div class="highlighted-repositories container">
     <h1 class="section-title">Repositórios <span>em destaques</span></h1>
     <div class="card-container">
       <div class="card">
-        <img src="repo1-thumbnail.jpg" alt="Repo 1">
+        <img src="tcc2.png" alt="Repo 1">
         <div class="card-content">
           <h2>Repositório 1</h2>
           <p>Descrição breve do repositório 1. Inclua detalhes sobre o que ele faz e por que é interessante.</p>
@@ -171,7 +171,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="repo2-thumbnail.jpg" alt="Repo 2">
+        <img src="tcc2.png" alt="Repo 2">
         <div class="card-content">
           <h2>Repositório 2</h2>
           <p>Descrição breve do repositório 2. Inclua detalhes sobre o que ele faz e por que é interessante.</p>
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="repo3-thumbnail.jpg" alt="Repo 3">
+        <img src="tcc2.png" alt="Repo 3">
         <div class="card-content">
           <h2>Repositório 3</h2>
           <p>Descrição breve do repositório 3. Inclua detalhes sobre o que ele faz e por que é interessante.</p>
