--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>Bem Vindos Ao<span></span></h1>
-        <h1>Vault Repos<span></span></h1>
+        <h1>Conectando Ideias,<span></span></h1>
+        <h1> Construindo Carreiras.<span></span></h1>
         <a href="#Destaque" type="button" class="cta">destaques</a>
       </div>
     </div>
